test/deprecated/parenful/not-procedure.good
not-procedure.chpl:2: error: the '@deprecated' attribute with 'parenful' style can only be applied to parenless procedures
