test/deprecated/parenful/not-procedure.chpl
@deprecated(notes="the parenful version of function f() is deprecated", style="parenful")
var f = 0;
var x = f;
